tests/rosetta/out/Smalltalk/accumulator-factory.out
/workspace/mochi/tests/rosetta/out/Smalltalk/accumulator-factory.st:8: parse error, expected '|' or identifier
