tests/rosetta/out/Smalltalk/accumulator-factory.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:35Z
"
| accumulator add main store x |
accumulator := [:sum | store := {sum}.
add := [:nv | store at: 0 put: (store at: 0 + nv).
store at: 0 ].
add ].
main := [ | x := accumulator value: 1.
x value: 5.
accumulator value: 3.
Transcript show: ((x value: 2.3 asString)) printString; cr. ].
main value.
